--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/fire": "^5.1.2",
     "@angular/forms": "~7.2.0",
     "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
@@ -23,7 +24,9 @@
     "@angular/pwa": "^0.13.8",
     "@angular/router": "~7.2.0",
     "@angular/service-worker": "~7.2.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "firebase": "^5.10.0",
     "hammerjs": "^2.0.8",
     "material-design-icons": "3.0.1",
     "rxjs": "~6.3.3",
