--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hammerjs": "^2.0.8",
     "material-design-icons": "3.0.1",
     "ngx-image-cropper": "1.3.8",
+    "ngx-spinner": "^8.0.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
